[tool.poetry]
name = "powy-herald"
version = "0.1.0"
description = "A script to poll a Telegram channel for new messages and send them to a SQS queue."
authors = ["Me <my@email.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
telethon = "^1.29.2"
requests = "^2.31.0"
boto3 = "^1.28.25"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.7.1"
poethepoet = "^0.24.4"
types-requests = "^2.31.0.10"
wemake-python-styleguide = "^0.18.0"

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
python_version = 3.11

[tool.poe.tasks]
lint = "flake8 main.py"
typecheck = "mypy main.py"
check-all = ["lint", "typecheck"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
